[tool.poetry]
name = "messing-with-batcat"
version = "0.1.0"
description = ""
authors = ["derpferpmerp <cmfleming@eths202.org>"]

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^5.4.1"
toml = "^0.10.2"
pandas = "^1.2.5"
json2xml = "^3.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
